--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
         "symfony/http-foundation": "^7.1",
         "symfony/yaml": "^7.1"
     },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.64"
+    },
     "autoload": {
         "psr-4": {
             "Axi\\MyCalendar\\": "src"
