--- a/composer.json
+++ b/composer.json
@@ -13,13 +13,13 @@
     "require": {
         "php": ">=8.1",
         "ext-intl": "*",
-        "symfony/translation": "7.1.*",
+        "symfony/translation": "^7.1",
         "symfony/finder": "^7.1",
         "symfony/http-foundation": "^7.1",
         "symfony/yaml": "^7.1"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.64"
+        "friendsofphp/php-cs-fixer": "^3"
     },
     "autoload": {
         "psr-4": {
