--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,8 +19,14 @@ jobs:
               uses: shivammathur/setup-php@v2
               with:
                   php-version: '8.2'
-                  tools: php-cs-fixer
+                  tools: php-cs-fixer, phpunit, composer
                   extensions: intl
+
+            - name: Composer
+              run: composer install
 
             - name: Test PhpCsFixer rules
               run: php-cs-fixer check
+
+            - name: Run phpunit tests
+              run: phpunit --bootstrap=vendor/autoload.php tests/
